Correction de bugg, amélioration de l'apparance et de l'affichage des billets et leur descriptions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,9 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="home_second">Home Second</string>
+    <string name="description_du_billet">Description du billet :</string>
+    <string name="titre_du_billet">Titre du billet :</string>
+    <string name="voir_billet">Voir billet</string>
+    <string name="textview">TextView</string>
 
 </resources>
